--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <script>
         // Exemple de données pour les participants et leurs points
         const participants = [
-            { name: 'En attente de participation...', points: 0, discordId: 'test', avatar: 'test' },
+            { name: 'En attente de participation..', points: 0, discordId: 'test', avatar: 'test' },
 
         ];
 
